objects/LiveChatTranscript__c.object
<CustomObject>
    <fields>
        <fullName>Abandoned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Abandoned</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageResponseTimeOperator__c</fullName>
        <label>AverageResponseTimeOperator</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageResponseTimeVisitor__c</fullName>
        <label>AverageResponseTimeVisitor</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BrowserLanguage__c</fullName>
        <label>BrowserLanguage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <label>Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatDuration__c</fullName>
        <label>Chat Duration</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChatKey__c</fullName>
        <label>ChatKey</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndedBy__c</fullName>
        <label>EndedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IpAddress__c</fullName>
        <label>IpAddress</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <label>Last Referenced Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>Last Viewed Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveChatButtonId__c</fullName>
        <label>LiveChatButton ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxResponseTimeOperator__c</fullName>
        <label>MaxResponseTimeOperator</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxResponseTimeVisitor__c</fullName>
        <label>MaxResponseTimeVisitor</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OperatorMessageCount__c</fullName>
        <label>OperatorMessageCount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferrerUri__c</fullName>
        <label>ReferrerUri</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTime__c</fullName>
        <label>RequestTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScreenResolution__c</fullName>
        <label>ScreenResolution</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorTranscriptBody__c</fullName>
        <label>SupervisorTranscriptBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserAgent__c</fullName>
        <label>UserAgent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitorMessageCount__c</fullName>
        <label>VisitorMessageCount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WaitTime__c</fullName>
        <label>Wait Time</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LiveChatTranscript__c</label>
    <nameField>
        <label>LiveChatTranscript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveChatTranscript__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>